remove unused postgres-backed stats stuff
Will replace with elasticsearch-based dash in webface
